--- a/gk.bib
+++ b/gk.bib
@@ -31082,3 +31082,74 @@ doi = {10.1126/science.adk3451},
   year={2017},
   publisher={American Psychological Association}
 }
+@article{gilbert1988cognitive,
+  title={On cognitive busyness: When person perceivers meet persons perceived.},
+  author={Gilbert, Daniel T and Pelham, Brett W and Krull, Douglas S},
+  journal={Journal of personality and social psychology},
+  volume={54},
+  number={5},
+  pages={733},
+  year={1988},
+  publisher={American Psychological Association}
+}
+@article{lavie2010attention,
+  title={Attention, distraction, and cognitive control under load},
+  author={Lavie, Nilli},
+  journal={Current directions in psychological science},
+  volume={19},
+  number={3},
+  pages={143--148},
+  year={2010},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+@article{lavie2004load,
+  title={Load theory of selective attention and cognitive control.},
+  author={Lavie, Nilli and Hirst, Aleksandra and De Fockert, Jan W and Viding, Essi},
+  journal={Journal of experimental psychology: General},
+  volume={133},
+  number={3},
+  pages={339},
+  year={2004},
+  publisher={American Psychological Association}
+}
+@article{savage2013does,
+  title={Does preoccupation impair hazard perception? A simultaneous EEG and eye tracking study},
+  author={Savage, Steven W and Potter, Douglas D and Tatler, Benjamin W},
+  journal={Transportation research part F: traffic psychology and behaviour},
+  volume={17},
+  pages={52--62},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{forster2009harnessing,
+  title={Harnessing the wandering mind: The role of perceptual load},
+  author={Forster, Sophie and Lavie, Nilli},
+  journal={Cognition},
+  volume={111},
+  number={3},
+  pages={345--355},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{corbetta2008reorienting,
+  title={The reorienting system of the human brain: from environment to theory of mind},
+  author={Corbetta, Maurizio and Patel, Gaurav and Shulman, Gordon L},
+  journal={Neuron},
+  volume={58},
+  number={3},
+  pages={306--324},
+  year={2008},
+  publisher={Elsevier}
+}
+@article{thompson1994accuracy,
+  title =        {Accuracy motivation attenuates covert priming: The
+                  systematic reprocessing of social information.},
+  author =       {Thompson, Erik P and Roman, Robert J and Moskowitz,
+                  Gordon B and Chaiken, Shelly and Bargh, John A},
+  journal =      {Journal of personality and Social Psychology},
+  volume =       {66},
+  number =       {3},
+  pages =        {474},
+  year =         {1994},
+  publisher =    {American Psychological Association}
+}
