--- a/gk.bib
+++ b/gk.bib
@@ -31153,3 +31153,22 @@ doi = {10.1126/science.adk3451},
   year =         {1994},
   publisher =    {American Psychological Association}
 }
+@article{wolff2019reliability,
+  title={The reliability of questionnaires in laboratory experiments: What can we do?},
+  author={Wolff, Irenaeus},
+  journal={Journal of Economic Psychology},
+  volume={74},
+  pages={102197},
+  year={2019},
+  publisher={Elsevier}
+}
+@article{singer2013use,
+  title={The use and effects of incentives in surveys},
+  author={Singer, Eleanor and Ye, Cong},
+  journal={The ANNALS of the American Academy of Political and Social Science},
+  volume={645},
+  number={1},
+  pages={112--141},
+  year={2013},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
