--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2798,8 +2798,9 @@
 @article{ClaHorKau2024,
   title  = {Correcting Measurement Error Bias in Conjoint Survey Experiments},
   author = {Clayton, Katherine and Horiuchi, Yusaku and Kaufman, Aaron R and King, Gary and Komisarchik, Mayya},
+  journal = {American Journal of Political Science}
   url    = {GaryKing.org/conjointE},
-  year   = {2024}
+  year   = {forthcoming, 2025}
 }
 @unpublished{EbaKatKin2024,
   author = {Danny Ebanks and Jonathan N. Katz and Gary King},
