--- a/gk.bib
+++ b/gk.bib
@@ -30117,10 +30117,10 @@
 }
 @book{LazBerMcP48,
   author    = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
-  publisher = {ICPSR [distributor]},
+  publisher = {ICPSR [distributor] [2006]},
   title     = {Elmira Community Study},
   doi       = {10.3886/ICPSR07200.v1},
-  year      = {1948 [2006]}
+  year      = {1948}
 }
 @article{kahneman1991anomalies,
   title     = {Anomalies: The endowment effect, loss aversion, and status quo bias},
