--- a/gk.bib
+++ b/gk.bib
@@ -16,8 +16,7 @@
 %
 % please be sure to commit changes regularly as many people may be 
 % using this at the same time.
-
-@STRING{ prq = "Political Research Quarterly"}
+@STRING{prq = "Political Research Quarterly"}
 @STRING{ apsr = "American Political Science Review"}
 @STRING{ ajps = "American Journal of Political Science"}
 @STRING{ jop = "Journal of Politics"}
@@ -16299,14 +16298,13 @@
 }
 
 @article{HerHei04,
-  title   = {The Distribution of R&D Subsidies and Its Effect on
-             the Final Outcome of Innovation Policy},
-  author  = {Liliana Herrera and Joost Heijs},
-  year    = {04},
-  journal = {DRUID Summern conference 2004 on Industrial Dynamic,
-             Innovation and Development,Elsinore, Denmark, June
-             14-16},
-  year    = {2004}
+  title =        {The Distribution of R&D Subsidies and Its Effect on
+                  the Final Outcome of Innovation Policy},
+  author =       {Liliana Herrera and Joost Heijs},
+  journal =      {DRUID Summern conference 2004 on Industrial Dynamic,
+                  Innovation and Development,Elsinore, Denmark, June
+                  14-16},
+  year =         {2004}
 }
 
 @unpublished{BryCapLuc02,
@@ -27356,32 +27354,31 @@
   publisher = {Graduate School of Business, Stanford University}
 }
 @article{KinGebMel18,
-  title   = {The Impact of Molecular Rigidity on Diamondoid
-             Self-Assembly},
-  author  = {Ella M. King and Matthew A. Gebbie and Nicholas A.
-             Melosh},
-  journal = {arXiv:1801.02064},
-  year    = {2018}
+  title =        {The Impact of Molecular Rigidity on Diamondoid
+                  Self-Assembly},
+  author =       {Ella M. King and Matthew A. Gebbie and Nicholas A.
+                  Melosh},
+  journal =      {arXiv:1801.02064},
+  year =         {2018}
 }
-@data{Klarner18,
-  author    = {Klarner, Carl},
-  publisher = {Harvard Dataverse},
-  title     = {State Legislative Election Returns, 1967-2016:
-               Restructured For Use},
-  year      = {2018},
-  url       = {doi.org/10.7910/DVN/DRSACA}
+@article{Klarner18,
+  author =       {Carl Klarner},
+  publisher =    {Harvard Dataverse},
+  title =        {State Legislative Election Returns, 1967-2016: Restructured For Use},
+  year =         {2018},
+  url =          {doi.org/10.7910/DVN/DRSACA}
 }
 @article{CaiChoLiu18,
-  title     = {A Reasonable Bias Approach to Gerrymandering: Using
-               Automated Plan Generation to Evaluate Redistricting
-               Proposals},
-  author    = {Cain, Bruce E and Tam Cho, Wendy K and Liu, Yan Y
-               and Zhang, Emily R},
-  journal   = {Wm. \& Mary L. Rev.},
-  volume    = {59},
-  pages     = {1521},
-  year      = {2017},
-  publisher = {HeinOnline}
+  title =        {A Reasonable Bias Approach to Gerrymandering: Using
+                  Automated Plan Generation to Evaluate Redistricting
+                  Proposals},
+  author =       {Cain, Bruce E and Tam Cho, Wendy K and Liu, Yan Y
+                  and Zhang, Emily R},
+  journal =      {William and Mary Law Review},
+  volume =       {59},
+  pages =        {1521},
+  year =         {2017},
+  publisher =    {HeinOnline}
 }
 @article{Hainmueller12,
   title     = {Entropy balancing for causal effects: A multivariate
