--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2798,7 +2798,7 @@
 @article{ClaHorKau2024,
   title  = {Correcting Measurement Error Bias in Conjoint Survey Experiments},
   author = {Clayton, Katherine and Horiuchi, Yusaku and Kaufman, Aaron R and King, Gary and Komisarchik, Mayya},
-  journal = {American Journal of Political Science}
+  journal = {American Journal of Political Science},
   url    = {GaryKing.org/conjointE},
   year   = {forthcoming, 2025}
 }
