--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2796,11 +2796,13 @@
   url       = {https://doi.org/10.7910/DVN/ASUFTY}
 }
 @article{ClaHorKau2024,
-  title  = {Correcting Measurement Error Bias in Conjoint Survey Experiments},
-  author = {Clayton, Katherine and Horiuchi, Yusaku and Kaufman, Aaron R and King, Gary and Komisarchik, Mayya},
-  journal = {American Journal of Political Science [forthcoming]},
-  url    = {GaryKing.org/conjointE},
-  year   = {2025}
+  title =        {Correcting Measurement Error Bias in Conjoint Survey
+                  Experiments},
+  author =       {Clayton, Katherine and Horiuchi, Yusaku and Kaufman,
+                  Aaron R and King, Gary and Komisarchik, Mayya},
+  journal =      {American Journal of Political Science [forthcoming]},
+  url =          {GaryKing.org/conjointE},
+  year =         {2025}
 }
 @unpublished{EbaKatKin2024,
   author = {Danny Ebanks and Jonathan N. Katz and Gary King},
