--- a/gk.bib
+++ b/gk.bib
@@ -31169,3 +31169,13 @@ doi = {10.1126/science.adk3451},
   year={2013},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+@article{vanderweele2011principal,
+  title={Principal stratification--uses and limitations},
+  author={VanderWeele, Tyler J},
+  journal={The international journal of biostatistics},
+  volume={7},
+  number={1},
+  pages={0000102202155746791329},
+  year={2011},
+  publisher={De Gruyter}
+}
