--- a/gk.bib
+++ b/gk.bib
@@ -31178,3 +31178,13 @@ doi = {10.1126/science.adk3451},
   year={2011},
   publisher={De Gruyter}
 }
+@article{hauser2015sa,
+  title={It’sa trap! Instructional manipulation checks prompt systematic thinking on “tricky” tasks},
+  author={Hauser, David J and Schwarz, Norbert},
+  journal={Sage Open},
+  volume={5},
+  number={2},
+  pages={2158244015584617},
+  year={2015},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
