--- a/gk.bib
+++ b/gk.bib
@@ -31188,3 +31188,13 @@ doi = {10.1126/science.adk3451},
   year={2015},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
+@article{stedman2019end,
+  title={The end of the (research) world as we know it? Understanding and coping with declining response rates to mail surveys},
+  author={Stedman, Richard C and Connelly, Nancy A and Heberlein, Thomas A and Decker, Daniel J and Allred, Shorna B},
+  journal={Society \& Natural Resources},
+  volume={32},
+  number={10},
+  pages={1139--1154},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
