--- a/gk.bib
+++ b/gk.bib
@@ -31198,3 +31198,197 @@ doi = {10.1126/science.adk3451},
   year={2019},
   publisher={Taylor \& Francis}
 }
+@article{WanAbbAbb20,
+	author  = {{GBD 2019 Demographics Collaborators}},
+	title   = {Global age-sex-specific fertility, mortality, healthy life expectancy (HALE), and population estimates in 204 countries and territories, 1950–2019: a comprehensive demographic analysis for the Global Burden of Disease Study 2019},
+	journal = {Lancet},
+	year    = 2020,
+	volume  = {396},
+	number  = {10258},
+	pages   = {1160--1203}
+}
+@article{HagFlaTak13,
+	author  = {Amy Hagopian and Abraham D Flaxman and Tim K Takaro and Sahar A. Esa Al Shatari and Julie Rajaratnam and Stan Becker and Alison Levin-Rector and Lindsay Galway and Berq J. Hadi Al-Yasseri and William M Weiss and Christopher J Murray and Gilbert Burnham},
+	title   = {Mortality in Iraq associated with the 2003-2011 war and occupation: findings from a National Cluster Sample Survey by the University Collaborative Iraq mortality},
+	journal = {PLoS Medicine},
+	year = {2013},
+	volume = {10},
+	number = {10}
+}
+@article{AlkAhmHwe08,
+	author  = {{Iraq Family Health Survey Study Group}},
+	title   = {Violence-Related Mortality in Iraq from 2002 to 2006},
+	journal = {New England journal of medicine},
+	year    = {2008},
+	volume  = {358},
+	number  = {5},
+	pages   = {484--493}
+}
+@article{LiFlaLaf16,
+	author  = {Shang-Ju Li and Abraham Flaxman and Riyadh Lafta and Lindsay Galway and Tim K. Takaro and Gilbert Burnham and Amy Hagopian},
+	title   = {A Novel Method for Verifying War Mortality while Estimating Iraqi Deaths for the Iran-Iraq War through Operation Desert Storm (1980-1993)},
+	journal = {PloS One},
+	year    = {2016},
+	volume  = {11},
+	number  = {10},
+	pages   = {e0164709--e0164709}
+}
+@article{Bundervoet09,
+	author  = {Tom Bundervoet},
+	title   = {Livestock, Land and Political Power: The 1993 Killings in Burundi},
+	journal = {Journal of Peace Research},
+	year    = {2009},
+	volume  = {46},
+	number  = {3},
+	pages   = {357--376}
+}
+@article{ObeMurGak08,
+	author  = {Ziad Obermeyer and Christopher J L Murray and Emmanuela Gakidou},
+	title   = {Fifty years of violent war deaths from Vietnam to Bosnia: analysis of data from the world health survey programme},
+	journal = {BMJ},
+	year    = {2008},
+	volume  = {336},
+	number  = {7659},
+	pages  = {1482--1486}
+}
+@article{KriShe14,
+    author  = {Douglas Kriner and Francis Shen},
+    title   = {Responding to War on Capitol Hill: Battlefield Casualties, Congressional Response, and Public Support for the War in Iraq},
+    journal = ajps,
+    year    = {2014},
+    volume  = {58},
+    number  = {1},
+    pages   = {157--174}
+}
+@article{KocNic16,
+    author  = {Michael T. Koch and Stephen P. Nicholson},
+    title   = {Death and Turnout: The Human Costs of War and Voter Participation in Democracies},
+    journal = ajps,
+    year    = {2016},
+    volume  = {60},
+    number  = {4},
+    pages   = {932--946}
+}
+@article{JohDav21,
+    author  = {Robert Johns and Graeme A M Davies},
+    title   = {Civilian Casualties and Public Support for Military Action},
+    journal = {Journal of Conflict Resolution},
+    year    = {2019},
+    volume  = 63,
+    number  = 1,
+    pages   = {251-281}
+}
+@article{ValHutBal04,
+    author  = {Benjamin A. Valentino and Paul Huth and Dylan Balch-Lindsay},
+    title   = {{``Draining the Sea'': Mass Killing and Guerrilla Warfare}},
+    journal = {International Organization},
+    year    = {2004},
+    volume  = {58},
+    number  = {2},
+    pages   = {375--407}
+}
+@article{GhoHutRus03,
+    author  = {Hazem Adam Ghobarah and Paul Huth and Bruce Russett},
+    title   = {Civil Wars Kill and Maim People---Long After the Shooting Stops},
+    journal = apsr,
+    year    = {2003},
+    volume  = {97},
+    number  = {2},
+    pages   = {189--202}
+}
+@article{Harff03,
+    author  = {Barbara Harff},
+    title   = {No Lessons Learned from the Holocaust? Assessing Risks of Genocide and Political Mass Murder since 1955},
+    journal = apsr,
+    year    = {2003},
+    volume  = {97},
+    number  = {1},
+    pages   = {57--73}
+}
+@article{SpaMacCoo09,
+    author  = {Michael Spagat and Andrew Mack and Tara Cooper and Joakim Kreutz},
+    title   = {Estimating War Deaths: An Arena of Contestation},
+    journal = {Journal of Conflict Resolution},
+    year    = {2009},
+    volume  = {53},
+    number  = {6},
+    pages   = {934--950}
+}
+@article{BurLafDoo06,
+    author  = {Gilbert Burnham and Riyadh Lafta and Shannon Doocy and Les Roberts},
+    title   = {Mortality after the 2003 invasion of {Iraq}: a cross-sectional cluster sample survey},
+    journal = {The Lancet},
+    year    = {2006},
+    volume  = {368},
+    number  = {9545},
+    pages   = {1421--1428}
+}
+@article{Watson05,
+    author    = {John Watson},
+    title     = {An assessment of mortality studies in Darfur, 2004--2005},
+    journal   = {Humanitarian Exchange Magazine},
+    year      = {2005},
+    number    = {30},
+    month     = {July},
+    publisher = {Humanitarian Practice Network (HPN), Overseas Development Institute (ODI)},
+    url       = {https://odihpn.org/publication/an-assessment-of-mortality-studies-in-darfur-2004-2005/}
+}
+@article{RadDaiSto23,
+    author  = {Benjamin J. Radford and Yaoyao Dai and Niklas Stoehr and Aaron Schein and Mya Fernandez and Hanif Sajid},
+    title   = {Estimating conflict losses and reporting biases},
+    journal = {Proceedings of the National Academy of Sciences},
+    year    = {2023},
+    volume  = {120},
+    number  = {34},
+    pages   = {e2307372120}
+}
+@article{CheRob08,
+    author  = {Francesco Checchi and Les Roberts},
+    title   = {Documenting Mortality in Crises: What Keeps Us from Doing Better?},
+    journal = {PLOS Medicine},
+    year    = {2008},
+    volume  = {5},
+    number  = {7},
+    pages   = {e146},
+    month   = {July}
+}
+@article{NooShnNad12,
+    author  = {Masi Noor and Nurit Shnabel and Arie Nadler and Samer Halabi},
+    title   = {When suffering begets suffering: {T}he psychology of competitive victimhood between adversarial groups in violent conflicts},
+    journal = {Personality and Social Psychology Review},
+    year    = {2012},
+    volume  = {16},
+    number  = {4},
+    pages   = {351--374}
+}
+@article{SatAlbIrw11,
+    author    = {Ville Satopää and Jeannie Albrecht and David Irwin and Barath Raghavan},
+    title     = {Finding a ``{K}needle'' in a Haystack: Detecting Knee Points in System Behavior},
+    journal   = {2011 31st International Conference on Distributed Computing Systems Workshops (ICDCSW)},
+    year      = {2011},
+    pages     = {166--171},
+    month     = {June},
+    doi       = {10.1109/ICDCSW.2011.20}
+}
+@article{Gateaux13,
+    author  = {René Gateaux},
+    title   = {Sur les fonctionnelles continues et les fonctionnelles analytiques},
+    journal = {Comptes rendus hebdomadaires des séances de l'Académie des sciences},
+    year    = {1913},
+    volume  = {157},
+    pages   = {325--327}
+}
+@book{Kalyvas06,
+    author    = {Stathis N. Kalyvas},
+    title     = {The Logic of Violence in Civil War},
+    publisher = {Cambridge University Press},
+    year      = {2006}
+}
+@book{CasBer01,
+    author    = {George Casella and Roger Berger},
+    title     = {Statistical Inference},
+    publisher = {Cengage Learning},
+    year      = {2001},
+    edition   = {2nd},
+    isbn      = {978-0534243128}
+}
