--- a/gk.bib
+++ b/gk.bib
@@ -4301,17 +4301,6 @@
   address     = {Univ. MN, Twin Cities, School of Statistics}
 }
 
-@article{GhoHutRus03,
-  author  = {Hazem Ghobarah and Paul Huth and Bruce Russett},
-  title   = {Civil Wars Kill and Maim People--Long after the Shooting Stops},
-  journal = apsr,
-  volume  = 97,
-  year    = 2003,
-  pages   = {189--202},
-  month   = 5,
-  number  = 2
-}
-
 @article{GiaPalCap01,
   author  = {S. Giampaoli and L. Palmieri and R. Capocaccia and L. Pilotto and D. Vanuzzo},
   title   = {Estimating Population-based Incidence and Prevalence of Major Coronary Events},
@@ -12124,7 +12113,7 @@
   volume  = 21,
   year    = 1990,
   pages   = {344--346},
-  month   = {Nov-Dec},
+  month   = {11},
   number  = 6
 }
 
@@ -31329,7 +31318,7 @@ doi = {10.1126/science.adk3451},
     journal   = {Humanitarian Exchange Magazine},
     year      = {2005},
     number    = {30},
-    month     = {July},
+    month     = {7},
     publisher = {Humanitarian Practice Network (HPN), Overseas Development Institute (ODI)},
     url       = {https://odihpn.org/publication/an-assessment-of-mortality-studies-in-darfur-2004-2005/}
 }
@@ -31350,7 +31339,7 @@ doi = {10.1126/science.adk3451},
     volume  = {5},
     number  = {7},
     pages   = {e146},
-    month   = {July}
+    month   = {7}
 }
 @article{NooShnNad12,
     author  = {Masi Noor and Nurit Shnabel and Arie Nadler and Samer Halabi},
@@ -31367,7 +31356,7 @@ doi = {10.1126/science.adk3451},
     journal   = {2011 31st International Conference on Distributed Computing Systems Workshops (ICDCSW)},
     year      = {2011},
     pages     = {166--171},
-    month     = {June},
+    month     = {6},
     doi       = {10.1109/ICDCSW.2011.20}
 }
 @article{Gateaux13,
