--- a/gk.bib
+++ b/gk.bib
@@ -31381,3 +31381,13 @@ doi = {10.1126/science.adk3451},
     edition   = {2nd},
     isbn      = {978-0534243128}
 }
+@article{KalSchHei22,
+    author = {Fabian Kalleitner and David W Schiestl and Georg Heiler},
+    title = {Varieties of Mobility Measures: Comparing Survey and Mobile Phone Data during the COVID-19 Pandemic},
+    journal = {Public Opinion Quarterly},
+    year = {2022},
+    month = {12},
+    volume = {86},
+    number = {4},
+    pages = {913-931}
+}
