--- a/gk.bib
+++ b/gk.bib
@@ -31391,3 +31391,21 @@ doi = {10.1126/science.adk3451},
     number = {4},
     pages = {913-931}
 }
+@article{LupPei17,
+    author = {Noam Lupu and Leonid Peisakhin},
+    title = {The Legacy of Political Violence across Generations},
+    journal = ajps,
+    year = {2017},
+    volume = {61},
+    number = {4},
+    pages = {836--851}
+}
+@article{WayZhu22
+    author = {Carly Wayne and Yuri M Zhukov},
+    title = {Never Again: The Holocaust and Political Legacies of Genocide},
+    journal = wp,
+    year = {2022},
+    volume = {74},
+    number = {3},
+    pages = {367--404}
+}
