--- a/gk.bib
+++ b/gk.bib
@@ -31400,7 +31400,7 @@ doi = {10.1126/science.adk3451},
     number = {4},
     pages = {836--851}
 }
-@article{WayZhu22
+@article{WayZhu22,
     author = {Carly Wayne and Yuri M Zhukov},
     title = {Never Again: The Holocaust and Political Legacies of Genocide},
     journal = wp,
