--- a/gk.bib
+++ b/gk.bib
@@ -31381,3 +31381,13 @@ doi = {10.1126/science.adk3451},
     edition   = {2nd},
     isbn      = {978-0534243128}
 }
+@article{masquelier2013adult,
+  title={Adult mortality from sibling survival data: a reappraisal of selection biases},
+  author={Masquelier, Bruno},
+  journal={Demography},
+  volume={50},
+  number={1},
+  pages={207--228},
+  year={2013},
+  publisher={Duke University Press}
+}
