--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1134,7 +1134,7 @@
   volume  = {324},
   year    = {2002},
   pages   = {346--349},
-  month   = {February 9},
+  month   = {2},
   note    = {{http://gking.harvard.edu/files/abs/armedph-abs.shtml}}
 }
 
