--- a/gk.bib
+++ b/gk.bib
@@ -31419,3 +31419,81 @@ doi = {10.1126/science.adk3451},
   year={2013},
   publisher={Duke University Press}
 }
+@article{JamAbuAly25,
+	author = {Zeina Jamaluddine and Hanan Abukmail and Sarah Aly and Oona M R Campbell and Francesco Checchi},
+	title = {Traumatic injury mortality in the Gaza Strip from Oct 7, 2023, to June 30, 2024: a capture–recapture analysis},
+	journal = {Lancet},
+	volume = {405},
+	year = {2025},
+	pages = {469--477},
+	number = {10477}
+}
+@article{HuyChiSpi24,
+	author = {Benjamin Q Huynh and Elizabeth T Chin and Paul B Spiegel},
+	title = {No evidence of inflated mortality reporting from the Gaza Ministry of Health},
+	journal = {Lancet},
+	volume = {403},
+	year = {2024},
+	pages = {23--24},
+	number = {10421}
+}
+@article{RalKisLik23,
+	author = {Clionadh Raleigh and Roudabeh Kishi and Andrew Linke},
+	title = {Political instability patterns are obscured by conflict dataset scope conditions, sources, and coding choices},
+	journal = {Humanities \& social sciences communications},
+	volume = {10},
+	year = {2023},
+	pages = {74--17},
+	number = {1}
+}
+@article{GleWalEri02,
+	author = {Nils Petter Gleditsch and Peter Wallensteen and Mikael Eriksson and Margareta Sollenberg and Håvard Strand},
+	title = {Armed Conflict 1946-2001: A New Dataset},
+	journal = {Journal of Peace Research},
+	volume = {39},
+	year = {2002},
+	pages = {615--637},
+	number = {5}
+}
+@misc{Ibc03,
+	author = {{Iraq Body Count}}
+	title = {Iraq Body Count},
+	year = {2003},
+	note = {{https://www.iraqbodycount.org/}}
+}
+@article{DejHaaKoo24,
+	author = {Alexander de Juan and Felix Haas and Carlo Koos and Sascha Riaz and Thomas Tichelbaecker},
+	title = {War and Nationalism: How WW1 Battle Deaths Fueled Civilians’ Support for the Nazi Party},
+	journal = apsr,
+	volume = {118},
+	year = {2024},
+	pages = {144--162},
+	number = {1}
+}
+@article{BerClaMaj24,
+	author = {Chantal Berman and Killian Clarke and Rima Majed},
+	title = {From Victims to Dissidents: Legacies of Violence and Popular Mobilization in Iraq (2003–2018)},
+	journal = apsr,
+	volume = {118},
+	year = {2024},
+	pages = {213--234},
+	number = {1}
+}
+@article{KreAge24,
+	author = {Anne-Kathrin Kreft and Mattias Agerberg},
+	title = {Imperfect Victims? Civilian Men, Vulnerability, and Policy Preferences},
+	journal = apsr,
+	volume = {118},
+	year = {2024},
+	pages = {274--290},
+	number = {1}
+}
+@article{ShaSha21,
+	author = {Andrew Shaver and Jacob N. Shapiro},
+	title = {The Effect of Civilian Casualties on Wartime Informing: Evidence from the Iraq War},
+	journal = {Journal of Conflict Resolution},
+	volume = {65},
+	year = {2021},
+	pages = {1337--1377},
+	number = {7/8}
+}
