--- a/gk.bib
+++ b/gk.bib
@@ -31456,7 +31456,7 @@ doi = {10.1126/science.adk3451},
 	number = {5}
 }
 @misc{Ibc03,
-	author = {{Iraq Body Count}},
+	author = {Iraq Body Count},
 	title = {Iraq Body Count},
 	year = {2003},
 	note = {{https://www.iraqbodycount.org/}}
