--- a/gk.bib
+++ b/gk.bib
@@ -31459,7 +31459,7 @@ doi = {10.1126/science.adk3451},
 	author = {Iraq Body Count},
 	title = {Iraq Body Count},
 	year = {2003},
-	note = {{https://www.iraqbodycount.org/}}
+	howpublished = {{https://www.iraqbodycount.org/}}
 }
 @article{DejHaaKoo24,
 	author = {Alexander de Juan and Felix Haas and Carlo Koos and Sascha Riaz and Thomas Tichelbaecker},
