--- a/gk.bib
+++ b/gk.bib
@@ -31419,3 +31419,12 @@ doi = {10.1126/science.adk3451},
   year={2013},
   publisher={Duke University Press}
 }
+@article{graham1989sisterhood,
+  title={The sisterhood method for estimating maternal mortality},
+  author={Graham, W},
+  journal={Mothers and children},
+  volume={8},
+  number={2 Suppl},
+  pages={1--2},
+  year={1989}
+}
