--- a/gk.bib
+++ b/gk.bib
@@ -31506,3 +31506,12 @@ doi = {10.1126/science.adk3451},
 	pages = {1337--1377},
 	number = {7/8}
 }
+@article{PieHol13,
+        author = {Jan H Pierskalla and Florian M Hollenbach},
+        title = {Technology and Collective Action: The Effect of Cell Phone Coverage on Political Violence in Africa},
+        journal = apsr,
+        volume = {107},
+        year = {2013},
+        pages = {207--224},
+        number = {2}
+}
