--- a/gk.bib
+++ b/gk.bib
@@ -31515,3 +31515,19 @@ doi = {10.1126/science.adk3451},
         pages = {207--224},
         number = {2}
 }
+@article{Con25,
+        author = {Jeffrey Conroy-Krutz},
+        title = {Muzzling the Media? Explaining Popular Support for Media Restrictions in Africa},
+        journal = jop,
+        year = {2025}
+}
+@article{Cur21,
+        author = {Travis Curtice},
+        title = {How Repression Affects Public Perceptions of Police: Evidence from a Natural Experiment in Uganda},
+        journal = {Journal of Conflict Resolution},
+        volume = {65},
+        year = {2021},
+        number = {10},
+        pages = {1680--1708}
+}
+
