--- a/gk.bib
+++ b/gk.bib
@@ -31530,4 +31530,13 @@ doi = {10.1126/science.adk3451},
         number = {10},
         pages = {1680--1708}
 }
-
+@article{mani2013poverty,
+  title={Poverty impedes cognitive function},
+  author={Mani, Anandi and Mullainathan, Sendhil and Shafir, Eldar and Zhao, Jiaying},
+  journal={science},
+  volume={341},
+  number={6149},
+  pages={976--980},
+  year={2013},
+  publisher={American Association for the Advancement of Science}
+}
