--- a/gk.bib
+++ b/gk.bib
@@ -31540,3 +31540,63 @@ doi = {10.1126/science.adk3451},
   year={2013},
   publisher={American Association for the Advancement of Science}
 }
+@article{SeiUtaFin25,
+title = {Subnational variations in the quality of household survey data in sub-Saharan Africa},
+author = {Valentin Seidler and Edson C. Utazi and Amelia B. Finaret and Sebastian Luckeneder and Gregor Zens and Maksym Bodarenko and Abigail W. Smith  and Sarah E. K. Bradley and Andrew J. Tatem and Patrick Webb},
+journal = {Nature Communications},
+pages = {3771--12},
+volume = {16},
+number = {1},
+year = {2025}
+}
+@article{MilBur09,
+title = {Interference, intimidation, and measuring mortality in war},
+author = {Edward J Mills and Frederick M Burkle},
+journal = {Lancet},
+pages = {1320--1322},
+volume = {373},
+number = {9672},
+year = {2009}
+}
+@article{Fearon95,
+title = {Rationalist explanations for war},
+author = {James D Fearon},
+journal = {International Organization},
+pages = {379--414},
+volume = {49},
+number = {3},
+year = {1995}
+}
+@article{Whitlock19,
+title = {At war with the truth},
+author = {Craig Whitlock},
+journal = {The Washington post},
+publisher = {The Washington Post},
+year = {2019},
+address = {Washington, D.C}
+}
+@book{Kuran97,
+title = {Private truths, public lies : the social consequences of preference falsification},
+author = {Timur Kuran},
+publisher = {Harvard University Press},
+isbn = {9780674248137},
+year = {1997},
+address = {Cambridge, Massachusetts ; London, England}
+}
+@article{LyaGraIma13,
+title = {Explaining Support for Combatants during Wartime: A Survey Experiment in Afghanistan},
+author = {Jason Lyall and Graeme Blair and Kosuke Imai},
+journal = apsr,
+pages = {679--705},
+volume = {107},
+number = {4},
+year = {2013}
+}
+@book{Popkin79,
+title = {The rational peasant :the political economy of rural society in Vietnam},
+author = {Samuel L Popkin},
+publisher = {University of California Press},
+year = {1979},
+address = {Berkeley}
+}
+
