--- a/gk.bib
+++ b/gk.bib
@@ -31599,4 +31599,12 @@ publisher = {University of California Press},
 year = {1979},
 address = {Berkeley}
 }
-
+@article{FotBya10,
+title = {Verbal Autopsy: Methods in Transition},
+author = {Edward Fottrell and Peter Byass},
+journal = {Epidemiologic Reviews},
+pages = {38--55},
+volume = {32},
+number = {1},
+year = {2010}
+}
