--- a/gk.bib
+++ b/gk.bib
@@ -31608,3 +31608,12 @@ volume = {32},
 number = {1},
 year = {2010}
 }
+@article{McgCasEko25,
+title = {Conflict-attributable mortality in Tigray Region, Ethiopia: Evidence from a survey of the Tigrayan diaspora},
+author = {Catherine R McGowan and Sarah A Cassidy-Seyoum and Promise Ekoriko and Mervat Alhaffar and Lucia Cassini and Jennifer Palmer and Abdihamid Warsame and Francesco Checchi},
+journal = {Population Health Metrics},
+pages = {19},
+volume = {23},
+number = {1},
+year = {2025}
+}
