--- a/gk.bib
+++ b/gk.bib
@@ -31617,3 +31617,29 @@ volume = {23},
 number = {1},
 year = {2025}
 }
+@article{Devi21,
+  title = {Tigray atrocities compounded by lack of health care},
+  author = {Sharmila Devi},
+  journal = {Lancet},
+  pages = {1336--1336},
+  volume = {397},
+  number = {10282},
+  year = {2021}
+}
+@techreport{TofKifKin22,
+  author       = {Moses Tofa and Alagaw Ababu Kifle and Hubert Kinkoh},
+  title        = {Political and Media Analysis on the Tigray Conflict in Ethiopia},
+  institution  = {European Institute of Peace},
+  year         = {2022},
+  month        = {February},
+  url          = {https://www.eip.org/publication/political-and-media-analysis-on-the-tigray-conflict-in-ethiopia/}
+}
+@misc{Plaut23,
+  author       = {Martin Plaut},
+  title        = {Updated Assessment of Civilian Starvation Deaths During the Tigray War},
+  year         = {2023},
+  month        = {May},
+  day          = {24},
+  url          = {https://martinplaut.com/2023/05/24/updated-assessment-of-civilian-starvation-deaths-during-the-tigray-war/},
+  note         = {Accessed: 2025-05-28}
+}
