--- a/gk.bib
+++ b/gk.bib
@@ -31631,15 +31631,14 @@ year = {2025}
   title        = {Political and Media Analysis on the Tigray Conflict in Ethiopia},
   institution  = {European Institute of Peace},
   year         = {2022},
-  month        = {February},
+  month        = {2},
   url          = {https://www.eip.org/publication/political-and-media-analysis-on-the-tigray-conflict-in-ethiopia/}
 }
 @misc{Plaut23,
   author       = {Martin Plaut},
   title        = {Updated Assessment of Civilian Starvation Deaths During the Tigray War},
   year         = {2023},
-  month        = {May},
+  month        = {5},
   day          = {24},
-  url          = {https://martinplaut.com/2023/05/24/updated-assessment-of-civilian-starvation-deaths-during-the-tigray-war/},
-  note         = {Accessed: 2025-05-28}
+  url          = {https://martinplaut.com/2023/05/24/updated-assessment-of-civilian-starvation-deaths-during-the-tigray-war/}
 }
