--- a/gk.bib
+++ b/gk.bib
@@ -31540,3 +31540,13 @@ doi = {10.1126/science.adk3451},
   year={2013},
   publisher={American Association for the Advancement of Science}
 }
+@article{crum2020optimizing,
+  title={Optimizing stress: An integrated intervention for regulating stress responses.},
+  author={Crum, Alia J and Jamieson, Jeremy P and Akinola, Modupe},
+  journal={Emotion},
+  volume={20},
+  number={1},
+  pages={120},
+  year={2020},
+  publisher={American Psychological Association}
+}
