--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2740,13 +2740,14 @@
   author  = {Georgina Evans and Gary King},
   url     = {GaryKing.org/dpd2}
 }
-@article{EvaKinSmiTha21,
-  author  = {Georgina Evans and Gary King and Adam D. Smith and
-             Abhradeep Thakurta},
-  title   = {Differentially Private Survey Research},
-  journal = {American Journal of Political Science},
-  url     = {GaryKing.org/DPsurvey},
-  year    = {forthcoming}
+@article{EvaKinSmiTha24,
+  author =       {Georgina Evans and Gary King and Adam D. Smith and
+                  Abhradeep Thakurta},
+  title =        {Differentially Private Survey Research},
+  journal =      {American Journal of Political Science},
+  url =          {GaryKing.org/DPsurvey},
+  pages =        {1--14},
+  year =         {forthcoming}
 }
 
 @article{KatKinRos2020,
