--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2747,7 +2747,7 @@
   journal =      {American Journal of Political Science},
   url =          {GaryKing.org/DPsurvey},
   pages =        {1--14},
-  year =         {forthcoming}
+  year =         {2024}
 }
 
 @article{KatKinRos2020,
