--- a/gk.bib
+++ b/gk.bib
@@ -31320,7 +31320,7 @@ doi = {10.1126/science.adk3451},
     number    = {30},
     month     = {7},
     publisher = {Humanitarian Practice Network (HPN), Overseas Development Institute (ODI)},
-    url       = {https://odihpn.org/publication/an-assessment-of-mortality-studies-in-darfur-2004-2005/}
+    url       = {https://bit.ly/4jzigft}
 }
 @article{RadDaiSto23,
     author  = {Benjamin J. Radford and Yaoyao Dai and Niklas Stoehr and Aaron Schein and Mya Fernandez and Hanif Sajid},
@@ -31642,7 +31642,7 @@ year = {2025}
   institution  = {European Institute of Peace},
   year         = {2022},
   month        = {2},
-  url          = {https://www.eip.org/publication/political-and-media-analysis-on-the-tigray-conflict-in-ethiopia/}
+  url          = {https://bit.ly/43RYGFA}
 }
 @misc{Plaut23,
   author       = {Martin Plaut},
@@ -31650,5 +31650,5 @@ year = {2025}
   year         = {2023},
   month        = {5},
   day          = {24},
-  url          = {https://martinplaut.com/2023/05/24/updated-assessment-of-civilian-starvation-deaths-during-the-tigray-war/}
+  url          = {https://bit.ly/4kKQkpN}
 }
