--- a/gk.bib
+++ b/gk.bib
@@ -31652,3 +31652,11 @@ year = {2025}
   day          = {24},
   url          = {https://bit.ly/4kKQkpN}
 }
+@misc{guha2018science,
+  title={Science and politics of disaster death tolls},
+  author={Guha-Sapir, Debarati and Checchi, Francesco},
+  journal={Bmj},
+  volume={362},
+  year={2018},
+  publisher={British Medical Journal Publishing Group}
+}
