--- a/gk.bib
+++ b/gk.bib
@@ -31660,3 +31660,14 @@ year = {2025}
   year={2018},
   publisher={British Medical Journal Publishing Group}
 }
+@Article{FerMahWar25,
+  author =       {Alessandra Ferrario and Esra Abdallah Abdalwahed
+                  Mahgoub and Abdihamid Warsame},
+  title =        {Monitoring mortality in fragile and conflict
+                  affected settings},
+  journal =      {BMJ},
+  year =         2025,
+  volume =       389,
+  pages =        {r908}
+}
+
