--- a/gk.bib
+++ b/gk.bib
@@ -31670,4 +31670,11 @@ year = {2025}
   volume =       389,
   pages =        {r908}
 }
-
+@article{backstrom2025measurement,
+  title={Measurement error when surveying issue positions: a MultiTrait MultiError approach},
+  author={Backstr{\"o}m, Kim and Cernat, Alexandru and Sir{\'e}n, Rasmus and S{\"o}derlund, Peter},
+  journal={Political Science Research and Methods},
+  pages={1--18},
+  year={2025},
+  publisher={Cambridge University Press}
+}
