dom casualty bibs

--- a/gk.bib
+++ b/gk.bib
@@ -31678,3 +31678,116 @@ year = {2025}
   year={2025},
   publisher={Cambridge University Press}
 }
+@article{valentino2014we,
+  title={Why we kill: The political science of political violence against civilians},
+  author={Valentino, Benjamin A},
+  journal={Annual Review of Political Science},
+  volume={17},
+  number={1},
+  pages={89--103},
+  year={2014},
+  publisher={Annual Reviews}
+}
+@article{downes2010targeting,
+  title={Targeting civilians to win? Assessing the military effectiveness of civilian victimization in interstate war},
+  author={Downes, Alexander B and Cochran, Kathryn McNabb},
+  year={2010}
+}
+@article{stein2015war,
+  title={War and revenge: Explaining conflict initiation by democracies},
+  author={Stein, Rachel M},
+  journal={American Political Science Review},
+  volume={109},
+  number={3},
+  pages={556--573},
+  year={2015},
+  publisher={Cambridge University Press}
+}
+@article{herrera2024don,
+  title={Don’t look back in anger: cooperation despite conflicting historical narratives},
+  author={Herrera, Yoshiko M and Kydd, Andrew H},
+  journal={American Political Science Review},
+  volume={118},
+  number={3},
+  pages={1174--1188},
+  year={2024},
+  publisher={Cambridge University Press}
+}
+@article{besley2014legacy,
+  title={The legacy of historical conflict: Evidence from Africa},
+  author={Besley, Timothy and Reynal-Querol, Marta},
+  journal={American Political Science Review},
+  volume={108},
+  number={2},
+  pages={319--336},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+@article{haas1969toward,
+  title={Toward the study of biopolitics: A cross-sectional analysis of mortality rates},
+  author={Haas, Michael},
+  journal={Behavioral Science},
+  volume={14},
+  number={4},
+  pages={257--280},
+  year={1969},
+  publisher={Wiley Online Library}
+}
+@article{friedman2019priorities,
+  title={Priorities for preventive action: Explaining Americans’ divergent reactions to 100 public risks},
+  author={Friedman, Jeffrey A},
+  journal={American Journal of Political Science},
+  volume={63},
+  number={1},
+  pages={181--196},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+@article{gartner2008multiple,
+  title={The multiple effects of casualties on public support for war: An experimental approach},
+  author={Gartner, Scott Sigmund},
+  journal={American political science review},
+  volume={102},
+  number={1},
+  pages={95--106},
+  year={2008},
+  publisher={Cambridge University Press}
+}
+@article{loewen2021war,
+  title={War Deaths Can Increase Support for Incumbents},
+  author={Loewen, Peter John and Rubenson, Daniel},
+  journal={Canadian Journal of Political Science/Revue canadienne de science politique},
+  volume={54},
+  number={2},
+  pages={416--430},
+  year={2021},
+  publisher={Cambridge University Press}
+}
+@article{fetzer2024losing,
+  title={Losing on the home front? Battlefield casualties, media, and public support for foreign interventions},
+  author={Fetzer, Thiemo and Souza, Pedro CL and Vanden Eynde, Oliver and Wright, Austin L},
+  journal={American Journal of Political Science},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+@article{hintson2023rallies,
+  title={Who rallies around the flag? Nationalist parties, national security, and the 2019 Indian election},
+  author={Hintson, Jamie and Vaishnav, Milan},
+  journal={American Journal of Political Science},
+  volume={67},
+  number={2},
+  pages={342--357},
+  year={2023},
+  publisher={Wiley Online Library}
+}
+@article{gibilisco2023strategic,
+  title={Strategic reporting: A formal model of biases in conflict data},
+  author={Gibilisco, Michael and Steinberg, Jessica},
+  journal={American Political Science Review},
+  volume={117},
+  number={4},
+  pages={1291--1307},
+  year={2023},
+  publisher={Cambridge University Press}
+}
+
