--- a/gk.bib
+++ b/gk.bib
@@ -31688,10 +31688,17 @@ year = {2025}
   year={2014},
   publisher={Annual Reviews}
 }
-@article{downes2010targeting,
-  title={Targeting civilians to win? Assessing the military effectiveness of civilian victimization in interstate war},
-  author={Downes, Alexander B and Cochran, Kathryn McNabb},
-  year={2010}
+@incollection{DowCoc10,
+	title = {Targeting civilians to win? {Assessing} the military effectiveness of civilian victimization in interstate war},
+	isbn = {978-0-262-26608-6},
+	url = {https://doi.org/10.7551/mitpress/8693.003.0005},
+	booktitle = {Rethinking violence: {States} and non-state actors in conflict},
+	publisher = {The MIT Press},
+	author = {Downes, Alexander B. and Cochran, Kathryn McNabb},
+	month = aug,
+	year = {2010},
+	doi = {10.7551/mitpress/8693.003.0005},
+	note = {tex.eprint: https://direct.mit.edu/book/chapter-pdf/2276296/9780262266086{\textbackslash}\_cab.pdf},
 }
 @article{stein2015war,
   title={War and revenge: Explaining conflict initiation by democracies},
