--- a/gk.bib
+++ b/gk.bib
@@ -31695,10 +31695,8 @@ year = {2025}
 	booktitle = {Rethinking violence: {States} and non-state actors in conflict},
 	publisher = {The MIT Press},
 	author = {Downes, Alexander B. and Cochran, Kathryn McNabb},
-	month = aug,
 	year = {2010},
-	doi = {10.7551/mitpress/8693.003.0005},
-	note = {tex.eprint: https://direct.mit.edu/book/chapter-pdf/2276296/9780262266086{\textbackslash}\_cab.pdf},
+	doi = {10.7551/mitpress/8693.003.0005}
 }
 @article{stein2015war,
   title={War and revenge: Explaining conflict initiation by democracies},
