--- a/gk.bib
+++ b/gk.bib
@@ -31795,4 +31795,12 @@ year = {2025}
   year={2023},
   publisher={Cambridge University Press}
 }
-
+@article{lacina2005monitoring,
+  title={Monitoring trends in global combat: A new dataset of battle deaths},
+  author={Lacina, Bethany and Gleditsch, Nils Petter},
+  journal={European Journal of Population/Revue Europ{\'e}enne de D{\'e}mographie},
+  volume={21},
+  pages={145--166},
+  year={2005},
+  publisher={Springer}
+}
