--- a/gk.bib
+++ b/gk.bib
@@ -31804,3 +31804,11 @@ year = {2025}
   year={2005},
   publisher={Springer}
 }
+@article{feehana2024validating,
+  title={Validating survey-based estimates of adult mortality with high-quality vital statistics: Evidence from 27 cities},
+  author={Feehana, Dennis M and Salganikb, Matthew J},
+  journal={adult mortality},
+  volume={16},
+  pages={17},
+  year={2024}
+}
