--- a/gk.bib
+++ b/gk.bib
@@ -31806,7 +31806,7 @@ year = {2025}
 }
 @article{feehana2024validating,
   title={Validating survey-based estimates of adult mortality with high-quality vital statistics: Evidence from 27 cities},
-  author={Feehana, Dennis M and Salganikb, Matthew J},
+  author={Feehan, Dennis M and Salganikb, Matthew J},
   journal={adult mortality},
   volume={16},
   pages={17},
